--- a/src/todo.html
+++ b/src/todo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>todo.html v@VERSION by leftium@gmail.com</title>
+    <title>todo.html by leftium@gmail.com v@VERSION</title>
     <style type="text/css">
         #appDiv {
             position: fixed;
