--- a/src/todo.html
+++ b/src/todo.html
@@ -3,42 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>todo.html by leftium@gmail.com v@VERSION</title>
-    <style type="text/css">
-        #appDiv {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: blue;
-        }
-
-        #outputDiv, #commandDiv {
-            position: absolute;
-            width: 96%;
-            left: 2%;
-            right: 98%;
-        }
-
-        #outputDiv {
-            top: 8px;
-            bottom: 35px;
-        }
-
-        #commandDiv {
-            bottom: 8px;
-            height: 16px;
-        }
-
-        #output, #command {
-            width: 100%;
-            height: 100%;
-        }
-
-        #usage, #shorthelp, #help {
-            position: fixed;  // suppress scroll bars
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="todo.css" />
 </head>
 <body>
     <pre id='usage'>Usage: [-fhpantvV] [-d todo_config] action [task_number] [task_description]</pre>
