--- a/src/todo.html
+++ b/src/todo.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" type="text/css" href="todo.css" />
 </head>
 <body>
+
+<div id="store">
+<pre id="TODO_DIR">todo dir value</pre>
+<pre id="TODO_FILE">todo file value</pre>
+<pre id="DONE_FILE">done file value</pre>
+<pre id="REPORT_FILE">report file value</pre>
+<pre id="TMP_FILE">tmp file value</pre>
+<pre id="_TODO">_todo value</pre>
+</div>
+
     <pre id='usage'>Usage: [-fhpantvV] [-d todo_config] action [task_number] [task_description]</pre>
     <pre id='shorthelp'>Actions:
   add|a "THING I NEED TO DO +project @context"
