--- a/src/todo.html
+++ b/src/todo.html
@@ -7,13 +7,17 @@
 </head>
 <body>
 
-<div id="storeArea">
+<div id="store">
 <pre id="TODO_DIR">todo dir value</pre>
 <pre id="TODO_FILE">todo file value</pre>
 <pre id="DONE_FILE">done file value</pre>
 <pre id="REPORT_FILE">report file value</pre>
 <pre id="TMP_FILE">tmp file value</pre>
 <pre id="_TODO">_todo value</pre>
+<pre id="_HISTORY">A
+B
+C
+</pre>
 </div>
 <!--POST-STOREAREA-->
 <!--POST-BODY-START-->
