--- a/src/jkm.html
+++ b/src/jkm.html
@@ -8,13 +8,19 @@
 <body>
 
 <div id="store">
-<PRE id=TODO_DIR>todo dir value</pre>
-<pre id=TODO_FILE>todo file value</pre>
-<pre id=DONE_FILE>done file value</pre>
-<pre id=REPORT_FILE>report file value</pre>
-<pre id=TMP_FILE>tmp file value</pre>
-<pre id=_TODO>_todo value</pre>
-<pre id=_HISTORY></PRE>
+
+<pre id="TODO_DIR">todo dir value</pre>
+<pre id="TODO_FILE">todo file value</pre>
+<pre id="DONE_FILE">done file value</pre>
+<pre id="REPORT_FILE">report file value</pre>
+<pre id="TMP_FILE">tmp file value</pre>
+<pre id="_TODO">_todo value</pre>
+<pre id="_HISTORY">A
+B
+C
+saveDomToFile('jkm.html')
+</pre>
+
 </div>
 <!--POST-STOREAREA-->
 <!--POST-BODY-START-->
@@ -205,7 +211,6 @@ Environment variables:
         </div>
     </div>
 
-    <script type="text/javascript" src="split.js" ></script>
     <script type="text/javascript" src="jquery.js" ></script>
     <script type="text/javascript" src="twfile.js" ></script>
     <script type="text/javascript" src="date.js"   ></script>
