Prefer TiddlySaver driver

--- a/src/todo.html
+++ b/src/todo.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 
-<div id="store">
-<PRE id=TODO_DIR>todo dir value</pre>
-<pre id=TODO_FILE>todo file value</pre>
-<pre id=DONE_FILE>done file value</pre>
-<pre id=REPORT_FILE>report file value</pre>
-<pre id=TMP_FILE>tmp file value</pre>
-<pre id=_TODO>_todo value</pre>
-<pre id=_HISTORY></PRE>
+<div id="storeArea">
+<pre id="TODO_DIR">todo dir value</pre>
+<pre id="TODO_FILE">todo file value</pre>
+<pre id="DONE_FILE">done file value</pre>
+<pre id="REPORT_FILE">report file value</pre>
+<pre id="TMP_FILE">tmp file value</pre>
+<pre id="_TODO">_todo value</pre>
+<pre id="_HISTORY"></pre>
 </div>
 <!--POST-STOREAREA-->
 <!--POST-BODY-START-->
