Change command <textarea> to text <input>

--- a/src/todo.html
+++ b/src/todo.html
@@ -201,7 +201,7 @@ Environment variables:
             <textarea id=output readonly=readonly ></textarea>
         </div>
         <div id="commandDiv" >
-            <textarea id=command ></textarea>
+            <input id=command type="text" ></input>
         </div>
     </div>
 
