Rename <div> elements to 'store-area' and 'history'

--- a/src/todo.html
+++ b/src/todo.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div id="storeArea">
-  <pre id="_HISTORY"></pre>
+<div id="store-area">
+  <pre id="history"></pre>
 </div>
 <!--POST-STOREAREA-->
 <!--POST-BODY-START-->
