--- a/src/todo.html
+++ b/src/todo.html
@@ -204,11 +204,12 @@ Environment variables:
 
   </div> <!-- cli-box -->
 
-  <script type="text/javascript" src="split.js" ></script>
+  <script type="text/javascript" src="split.js"  ></script>
   <script type="text/javascript" src="jquery.js" ></script>
   <script type="text/javascript" src="twfile.js" ></script>
   <script type="text/javascript" src="date.js"   ></script>
   <script type="text/javascript" src="saving.js" ></script>
+  <script type="text/javascript" src="taffy.js"  ></script>
   <script type="text/javascript" src="todo.js"   ></script>
 </body>
 
