More robust Tiddlysaver.
Instead of checking the applet from JavaScript,
the applet sets a flag in JavaScript land.

--- a/src/todo.html
+++ b/src/todo.html
@@ -8,6 +8,17 @@
 <body>
 
 <div id="store-area">
+<pre id="*history">["","2+2","$.twFile.load(normalizedFilepath('todo.css'))","$.twFile","$","normalizedFilepath('todo.css')","normalizedFilepath()"]</pre>
+<pre id="#test">"TEST"</pre>
+<pre id="$TODO_DIR">"C:/Users/Leftium/.todo"</pre>
+<pre id="$ONE">"1"</pre>
+<pre id="$TWO">"1/2"</pre>
+<pre id="$THREE">"1/2/3"</pre>
+<pre id="$TODO_FILE">"C:/Users/Leftium/.todo/todo.txt"</pre>
+<pre id="$DONE_FILE">"C:/Users/Leftium/.todo/done.txt"</pre>
+<pre id="$REPORT_FILE">"C:/Users/Leftium/.todo/report.txt"</pre>
+<pre id="$TMP_FILE">"C:/Users/Leftium/.todo/todo.tmp"</pre>
+<pre id="$HOME">"C:/Users/Leftium"</pre>
 </div>
 <!--POST-STOREAREA-->
 <!--POST-BODY-START-->
