Basic infrastructure for stand-alone todo.js.
(The new) todo.js will contain the equivalent functionality of the
todo.txt-cli project's todo.sh. There is a thin wrapper around todo.js
named todo.sh. It should be a drop-in replacement for todo.txt-cli's
todo.sh. Thus todo.html can use todo.txt-cli's test cases without
modification! Note the wrapper requires node.js.

(The old) todo.js has been renamed to shell.js to reflect that it will
only contain functions to emulate a CLI in the browser.

--- a/src/todo.html
+++ b/src/todo.html
@@ -220,7 +220,7 @@ Environment variables:
   <script type="text/javascript" src="date.js"   ></script>
   <script type="text/javascript" src="saving.js" ></script>
   <script type="text/javascript" src="taffy.js"  ></script>
-  <script type="text/javascript" src="todo.js"   ></script>
+  <script type="text/javascript" src="shell.js"   ></script>
 </body>
 
 </html>
