--- a/src/todo.html
+++ b/src/todo.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id="store-area">
-<pre id="*history">["","2+2","$.twFile.load(normalizedFilepath('todo.css'))","$.twFile","$","normalizedFilepath('todo.css')","normalizedFilepath()"]</pre>
+<pre id="*history">["","help","ls","pri 1 A","report","add 5","do 1","a TESET","?","a T2","a T1","a test","-f rm 3","-f rm 2","a 33","-f rm 1","a 2nd","rm 1","a first","a 5","add test","rm -f 2","rm 2","add TESTE","add TEST","do 2","ls done","do 2ls","do 3","-V","version","shorthelp","a TEST","-y","-h","2+2","$.twFile.load(normalizedFilepath('todo.css'))","$.twFile","$","normalizedFilepath('todo.css')","normalizedFilepath()"]</pre>
 <pre id="#test">"TEST"</pre>
 <pre id="$TODO_DIR">"C:/Users/Leftium/.todo"</pre>
 <pre id="$ONE">"1"</pre>
@@ -19,6 +19,7 @@
 <pre id="$REPORT_FILE">"C:/Users/Leftium/.todo/report.txt"</pre>
 <pre id="$TMP_FILE">"C:/Users/Leftium/.todo/todo.tmp"</pre>
 <pre id="$HOME">"C:/Users/Leftium"</pre>
+<pre id="$TODOTXT_VERBOSE">"0;"</pre>
 </div>
 <!--POST-STOREAREA-->
 <!--POST-BODY-START-->
@@ -220,7 +221,10 @@ Environment variables:
   <script type="text/javascript" src="date.js"   ></script>
   <script type="text/javascript" src="saving.js" ></script>
   <script type="text/javascript" src="taffy.js"  ></script>
-  <script type="text/javascript" src="shell.js"   ></script>
+  <script type="text/javascript" src="shell.js"  ></script>
+
+  <script type="text/javascript" src="core/getopt.js"  ></script>
+  <script type="text/javascript" src="core/todo.js"  ></script>
 </body>
 
 </html>
