Prepare for initial release.
Set version.
Show version info on start.
Ignore 'todo.sh' and 't' at beginning of commands.

--- a/src/todo.html
+++ b/src/todo.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>todo.html by leftium@gmail.com v@VERSION</title>
+  <title>todo.html by leftium@gmail.com v0.2.9.4alpha</title>
   <link rel="stylesheet" type="text/css" href="todo.css" />
 </head>
 <body>
 
 <div id="store-area">
-<pre id="*history">["","h","ls","help","-p lsa","lsa","do 1","do 2","add 2","add 7","add 5","add 9","add 89","add 0","save 9","add five","report","depri 1","add test","clr","dir","-p ls","pri 1 A","a TESET","?","a T2","a T1","a test","-f rm 3","-f rm 2","a 33","-f rm 1","a 2nd","rm 1","a first","a 5","rm -f 2","rm 2","add TESTE","add TEST","ls done","do 2ls","do 3","-V","version","shorthelp","a TEST","-y","-h","2+2","$.twFile.load(normalizedFilepath('todo.css'))","$.twFile","$","normalizedFilepath('todo.css')","normalizedFilepath()"]</pre>
+<pre id="*history">["","t help","todo.sh ls","todo.sh shorthelp"]</pre>
 <pre id="#test">"TEST"</pre>
 <pre id="$TODO_DIR">"C:/Users/Leftium/.todo"</pre>
 <pre id="$ONE">"1"</pre>
