Add some informative debug messages.
- Debugging browser compatibility.
- Also enable TiddlySaver driver in Mozilla

--- a/src/todo.html
+++ b/src/todo.html
@@ -38,6 +38,7 @@
 
   </div> <!-- cli-box -->
 
+  <script type="text/javascript" src="ba-debug.js"  ></script>
   <script type="text/javascript" src="split.js"  ></script>
   <script type="text/javascript" src="jquery.js" ></script>
   <script type="text/javascript" src="twfile.js" ></script>
