Prepend todo data to todo.html.
https://github.com/ginatrapani/todo.txt-cli/wiki/The-Todo.txt-Format

--- a/src/todo.html
+++ b/src/todo.html
@@ -1,2 +1,8 @@
+(A) Incomplete Task Rule 1: If priority exists, it ALWAYS appears first.
+(A) 2013-07-22 Incomplete Task Rule 2: Creation date may optionally appear directly after priority and a space.
+Incomplete Task Rule 3: @Contexts and +Projects may appear anywhere in the line after priority/prepended date.
+
+x Rule 1: A completed task starts with an x.
+x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after the x, separated by a space.
 <!DOCTYPE html>
 <title>todo.html</title>
