Force IE to properly render <pre> (standards mode).

--- a/src/todo.html
+++ b/src/todo.html
@@ -6,6 +6,7 @@ x Rule 1: A completed task starts with an x.
 x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after the x, separated by a space.
 <!DOCTYPE html>
 <title>todo.html</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="stylesheet" type="text/css" href="todo.css">
 
 <style>
