AMD'ify twfile.js -> localstore.js.

--- a/src/todo.html
+++ b/src/todo.html
@@ -5,7 +5,7 @@ Incomplete Task Rule 3: @Contexts and +Projects may appear anywhere in the line 
 x Rule 1: A completed task starts with an x.
 x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after the x, separated by a space.
 ### START STORE (for more info: www.todo.html) ###
-{"history":["require('twfile')","help()","$","help()","$","$","$","$","$","$","$","3+3","$","$","history","history","$","help 0","$","4","3","$","$","help 0","help .","2 + 2","s = loadStore()","twfile.load(nfp())","twfile.load(nfp())",""]}
+{"history":["$","help 0","$","help 0","$","require('twfile')","help()","$","help()","$","$","$","$","$","$","$","3+3","$","$","history","history","$","help 0","$","4","3","$","$","help 0","help .","2 + 2","s = loadStore()","twfile.load(nfp())","twfile.load(nfp())",""]}
 <!DOCTYPE html>
 <title>todo.html</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +46,4 @@ x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after th
     </div>
 </noscript>
 
-<script>
-    var requirejs = { shim: { 'twfile': { exports: '$.twFile' } } };
-</script>
 <script data-main="js/main" src="js/require.js"></script>
