--- a/src/todo.html
+++ b/src/todo.html
@@ -4,8 +4,15 @@ Incomplete Task Rule 3: @Contexts and +Projects may appear anywhere in the line 
 
 x Rule 1: A completed task starts with an x.
 x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after the x, separated by a space.
-### START STORE (for more info: www.todo.html) ###
-{"history":["$","help 0","$","help 0","$","require('twfile')","help()","$","help()","$","$","$","$","$","$","$","3+3","$","$","history","history","$","help 0","$","4","3","$","$","help 0","help .","2 + 2","s = loadStore()","twfile.load(nfp())","twfile.load(nfp())",""]}
+
+
+
+
+!!WARNING!! Do not modify contents below. (https://github.com/Leftium/todo.html)
+
+
+{"history":["help()","2 + 1","$","alert('test')",""]}
+
 <!DOCTYPE html>
 <title>todo.html</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
