--- a/src/todo.html
+++ b/src/todo.html
@@ -25,7 +25,7 @@ x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after th
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: black;
+    background-color: #222;
     text-align: center;
 }
 
