Enable reading from other browsers.
Read data from innerHTML instead of localfile.

--- a/src/todo.html
+++ b/src/todo.html
@@ -13,6 +13,8 @@ x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after th
 
 {"history":["help()","2 + 1","$","alert('test')",""]}
 
+!!ENDSTORE!!
+
 <!DOCTYPE html>
 <title>todo.html</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
