--- a/src/todo.html
+++ b/src/todo.html
@@ -36,7 +36,7 @@ body {
   </div>
   <div id="inputdiv">
     <div id="inputl">
-      <pre id="prompt">coffee&gt;&nbsp;</pre>
+      <pre id="prompt">todo&gt;&nbsp;</pre>
     </div>
     <div id="inputr">
       <textarea id="input" spellcheck="false"></textarea>
