Automate todo.html build with Grunt.

--- a/src/todo.html
+++ b/src/todo.html
@@ -58,4 +58,7 @@ body {
     </div>
 </noscript>
 
-<script data-main="js/main" src="js/require.js"></script>
+<script> var require = { baseUrl: 'js' } </script>
+<script src="js/require.js"></script>
+<script src="js/main.js"></script>
+
