--- a/src/todo.html
+++ b/src/todo.html
@@ -8,7 +8,7 @@ x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after th
 
 
 
-!!WARNING!! Do not edit this line. [https://github.com/Leftium/todo.html]       {"history":["help()","2 + 1","$","alert('test')",""]}!!ENDSTORE!!
+!!WARNING!! Do not edit this line. [https://github.com/Leftium/todo.html]       {"history":["t=require('todo'); os=require('os'); t.init(os.env, os.fs, os.ui, os.system); t.run('help')","t=require('todo'); os=require('os'); t.init(os.env, os.fs, os.ui, os.system)","help()","2 + 1","$","alert('test')",""]}!!ENDSTORE!!
 <!DOCTYPE html>
 <title>todo.html</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,6 +58,7 @@ body {
     </div>
 </noscript>
 
+<script src="js/getopt.js"></script>
 <script> var require = { baseUrl: 'js' } </script>
 <script src="js/require.js"></script>
 <script src="js/main.js"></script>
