Add friendly 'product tour' todo and history items.

--- a/src/todo.html
+++ b/src/todo.html
@@ -1,14 +1,31 @@
-(A) Incomplete Task Rule 1: If priority exists, it ALWAYS appears first.
-(A) 2013-07-22 Incomplete Task Rule 2: Creation date may optionally appear directly after priority and a space.
-Incomplete Task Rule 3: @Contexts and +Projects may appear anywhere in the line after priority/prepended date.
+(A) Command History: [UP]/[DOWN] keys    *find tour items in history!*         +basics
+(B) JavaScript REPL: `;Math.PI * 2`   *start JS expressions with ';'*          +basics
+(C) Clear the console: [CTRL]-[L] or `cls`    *just like you're used to!*      +basics
+(D) Advance to quick start: `todo ls +quickstart `                             +basics
 
-x Rule 1: A completed task starts with an x.
-x 2014-08-23 2013-07-22 Rule 2: The date of completion appears directly after the x, separated by a space.
+(E) Review classic todo.sh commands: `todo help`                               +quickstart
+(F) Confirm this file nearly follows the todo.txt spec    *view source*        +quickstart
+(G) Try classic todo.sh commands    *like "add", "do", or "del"*               +quickstart
+(H) Confirm this file edited itself!    *view source*           @local-ie-only +quickstart
+(I) Continue to upcoming features: `todo list +comingsoon `                    +quickstart
+
+(J) Automatic URL & email address linkification                                +comingsoon
+(K) Markdown support                                                           +comingsoon
+(L) Todo.html instant    *filter-as-you-type a la Google instant*              +comingsoon
+(M) External todo.txt/todo.cfg file import    *via drag & drop*                +comingsoon
+(N) Interactive GUI    *checkboxes and buttons*                                +comingsoon
+(O) Even more features: `todo list +2.0 `    *planned for todo.html 2.0*        +comingsoon
+
+(P) Relative dates    *tomorrow, next week, in two days...*                    +2.0
+(Q) Dependent tasks    *collapse/hide child items that can't be started yet*   +2.0
+(R) Automatic priority    *based on due date and other factors*                +2.0
+(S) Recurring tasks                                                            +2.0
 
 
 
 
-!!WARNING!! Do not edit this line. [https://github.com/Leftium/todo.html]       {"history":["t=require('todo'); os=require('os'); t.init(os.env, os.fs, os.ui, os.system); t.run('help')","t=require('todo'); os=require('os'); t.init(os.env, os.fs, os.ui, os.system)","help()","2 + 1","$","alert('test')",""]}!!ENDSTORE!!
+
+!!WARNING!! Do not edit this line. [https://github.com/Leftium/todo.html]       {"history":[";Math.PI * 2","cls","todo ls +quickstart","todo do 8","todo list +comingsoon",""],"files":{"todo.cfg":"","#todo.cfg":"export TODO_FILE=\"#todo.txt\"\nexport DONE_FILE=\"#done.txt\"\nexport REPORT_FILE=\"#report.txt\"\n","#done.txt":"","#report.txt":""},"settings":{"displayfile":"#todo.txt"},"env":{"TODOTXT_CFG_FILE":"#todo.cfg","TODO_SH":"todo","TODOTXT_PLAIN":1}}!!ENDSTORE!!
 <!DOCTYPE html>
 <title>todo.html</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
