--- a/src/todo.html
+++ b/src/todo.html
@@ -14,18 +14,14 @@
 (L) Todo.html instant    *filter-as-you-type a la Google instant*              +comingsoon
 (M) External todo.txt/todo.cfg file import    *via drag & drop*                +comingsoon
 (N) Interactive GUI    *checkboxes and buttons*                                +comingsoon
-(O) Even more features: `todo list +2.0 `    *planned for todo.html 2.0*        +comingsoon
+(O) Even more features: `todo list +2.0 `    *planned for todo.html 2.0*       +comingsoon
 
 (P) Relative dates    *tomorrow, next week, in two days...*                    +2.0
 (Q) Dependent tasks    *collapse/hide child items that can't be started yet*   +2.0
 (R) Automatic priority    *based on due date and other factors*                +2.0
 (S) Recurring tasks                                                            +2.0
 
-
-
-
-
-!!WARNING!! Do not edit this line. [https://github.com/Leftium/todo.html]       {"history":[";Math.PI * 2","cls","todo ls +quickstart","todo do 8","todo list +comingsoon",""],"files":{"todo.cfg":"","#todo.cfg":"export TODO_FILE=\"#todo.txt\"\nexport DONE_FILE=\"#done.txt\"\nexport REPORT_FILE=\"#report.txt\"\n","#done.txt":"","#report.txt":""},"settings":{"displayfile":"#todo.txt"},"env":{"TODOTXT_CFG_FILE":"#todo.cfg","TODO_SH":"todo","TODOTXT_PLAIN":1}}!!ENDSTORE!!
+!!WARNING!! Do not edit this line. [https://github.com/Leftium/todo.html]       {"history":[";Math.PI * 2","cls","todo ls +quickstart","todo do 8","todo list +comingsoon",""],"files":{"todo.cfg":"","#todo.cfg":"export TODO_FILE=\"#todo.txt\"\nexport DONE_FILE=\"#done.txt\"\nexport REPORT_FILE=\"#report.txt\"\n","#done.txt":"","#report.txt":""},"settings":{"masterfile":"#todo.txt"},"env":{"TODOTXT_CFG_FILE":"#todo.cfg","TODO_SH":"todo","TODOTXT_PLAIN":1}}!!ENDSTORE!!
 <!DOCTYPE html>
 <title>todo.html</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
