Add some items to history (product tour).

--- a/src/todo.html
+++ b/src/todo.html
@@ -21,7 +21,7 @@
 (R) Automatic priority    *based on due date and other factors*                +2.0
 (S) Recurring tasks                                                            +2.0
 
-!!WARNING!! Do not edit this line. [https://github.com/Leftium/todo.html]       {"history":[";Math.PI * 2","cls","todo ls +quickstart","todo do 8","todo list +comingsoon",""],"files":{"todo.cfg":"","#todo.cfg":"export TODO_FILE=\"#todo.txt\"\nexport DONE_FILE=\"#done.txt\"\nexport REPORT_FILE=\"#report.txt\"\n","#done.txt":"","#report.txt":""},"settings":{"masterfile":"#todo.txt"},"env":{"TODOTXT_CFG_FILE":"#todo.cfg","TODO_SH":"todo","TODOTXT_PLAIN":1}}!!ENDSTORE!!
+!!WARNING!! Do not edit this line. [https://github.com/Leftium/todo.html]       {"history":["todo ls +basics",";Math.PI * 2","cls","todo ls +quickstart","todo do 8","todo list +comingsoon","todo list +2.0",""],"files":{"todo.cfg":"","#todo.cfg":"export TODO_FILE=\"#todo.txt\"\nexport DONE_FILE=\"#done.txt\"\nexport REPORT_FILE=\"#report.txt\"\n","#done.txt":"","#report.txt":""},"settings":{"masterfile":"#todo.txt"},"env":{"TODOTXT_CFG_FILE":"#todo.cfg","TODO_SH":"todo","TODOTXT_PLAIN":1}}!!ENDSTORE!!
 <!DOCTYPE html>
 <title>todo.html</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
