Replace local todo with npm todo module.

--- a/src/todo.html
+++ b/src/todo.html
@@ -72,7 +72,7 @@ body {
 </noscript>
 
 <script src="js/getopt.js"></script>
-<script> var require = { baseUrl: 'js' } </script>
+<script> var require = { baseUrl: 'js', paths: { node_modules: '../../node_modules' } } </script>
 <script src="js/require.js"></script>
 <script src="js/main.js"></script>
 
